[package]
name = "serverless-redis"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.8", default-features = false, features = ["json", "http1", "tokio", "macros"] }
tokio = { version = "1", default-features = false, features = ["rt", "macros", "net", "time"] }
redis = { version = "1.0.2", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tower-http = { version = "0.6", features = ["auth", "validate-request"] }
anyhow = "1"
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"
dotenvy = "0.15"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
axum = { version = "0.8.8", default-features = false, features = ["json", "http1", "tokio", "macros"] }
